--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -83,6 +83,40 @@ h1, h2, h3 {
   color: white;
 }
 
+.left-align {
+  text-align: left;
+}
+
+.hide-btn2-background {
+  background-color: transparent;
+
+
+  border: none;
+   border-radius: 3px;
+  // box-shadow: 0 -3px 0 rgba(0,0,0,0.15) inset;
+   color: #fff;
+  letter-spacing: .1em;
+   cursor: pointer;
+   position: relative;
+   text-align: center;
+  // text-transform: uppercase;
+  text-decoration: none;
+   vertical-align: middle;
+   white-space: nowrap;
+   transition-property: transform;
+   transform: translateZ(0);
+   transition: box-shadow 0.5s cubic-bezier(0.390, 0.500, 0.150, 1.360);
+   
+   &:hover {
+     box-shadow: 0 0 0 35px rgba(0,0,0,0.25) inset;
+     color: white;
+   }
+  
+   &:active {
+     transform: translateY(3px);
+   }
+}
+
 
 ////////////////////////////////////////////////////////////////////
 // https://codemyui.com/fancy-button-effects/
