--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,12 +1,14 @@
 <div class="home-callout text-center container-fluid">
-  <h1> Lestley A. Gabo </h1>
+  <div class='jumbotron'>
+    <h1><strong> Lestley A. Gabo </strong></h1>
+  </div>
   <!--<h4>This page contains links to my LinkedIn, GitHub, and HackerRank profiles.</h4>-->
   <!--<h4>It also contains links to my projects, completed or otherwise.</h4>-->
-  
-  <br>
-  
+
+
   <div class="container">
-    <h1 class="left-align"> Profiles </h1>
+    <hr>
+    <h1 class="left-align"><strong> Profiles </strong></h1>
     <div class="row">  
       <div class="col-md-4">
         <%= link_to "//www.linkedin.com/in/lestgabo/", class:"btn2", target: "_blank" do %>
@@ -30,9 +32,25 @@
   </div>
   
   <br>
+
+  <div class="container">
+    <h1 class="left-align"><strong> Resume </strong></h1>
+    <div class="row"> 
+      <div class="col-md-4">
+        <!-- col-md-offset-4 -->
+        <!--Resume-->
+        <%= link_to "https://drive.google.com/file/d/0B9Dt_lzGChXNNXRlR3R0S1I4bVk/view", class:"btn2", target: "_blank" do %>
+          Resume
+        <% end %>
+      </div>
+    </div>
+   </div> 
+  
+  <br>
   
   <div class="container">
-    <h1 class="left-align"> Web Projects </h1>
+    <h1 class="left-align"><strong> Projects </strong></h1>
+    <h2 class="left-align"> Web Development </h2>
     <div class="row"> 
       <div class="col-md-4">
         <%= link_to "//pacific-mesa-35161.herokuapp.com/", class:"btn2", target: "_blank" do %>
@@ -53,31 +71,49 @@
       </div>
     </div>
   </div>
-  
-  
+   
   <br>
 
   <div class="container">
-    <h1 class="left-align"> Resume </h1>
+    <h2 class="left-align"> Robotics Research Co-op </h2>
     <div class="row"> 
       <div class="col-md-4">
-        <!-- col-md-offset-4 -->
-        <!--Resume-->
-        <%= link_to "https://drive.google.com/file/d/0B9Dt_lzGChXNNXRlR3R0S1I4bVk/view", class:"btn2", target: "_blank" do %>
-          Resume
+        <%= link_to "//github.com/elderlyrobotics", class:"btn2", target: "_blank" do %>
+        <i class= "fa fa-github-square"></i>
+          elderlyrobotics GitHub 
         <% end %>
       </div>
-    </div>
-   </div> 
-        
-      <br>
-      <br>
-  <div class="container">
-    <h1 class="left-align"> Projects and Lab Reports </h1>
+      <div class="col-md-4">
+        <%= link_to "https://drive.google.com/file/d/0B9Dt_lzGChXNRVpxeE00TVJ6WHM", class:"btn2", target: "_blank" do %>
+          User Manual 
+        <% end %>
+      </div>
+    </div>  <!-- /div row of Robotics Research Co-op github and user manual -->
     
-      <br>
-      <br>
-      
+    <div class="row">
+      <div class="col-md-4">
+        <%= link_to "https://drive.google.com/open?id=0B9Dt_lzGChXNem9Ub2pPU1JXV28", class:"btn2", target: "_blank"  do %>
+          Developer's Manual Part 1
+        <% end %>
+      </div>
+      <div class="col-md-4">
+        <%= link_to "https://drive.google.com/open?id=0B9Dt_lzGChXNMmEzajBpdV83OTQ", class:"btn2", target: "_blank"  do %>
+          Developer's Manual Part 2
+        <% end %>
+      </div>
+      <div class="col-md-4">
+        <%= link_to "https://drive.google.com/open?id=0B9Dt_lzGChXNU3FLdXJ3dWloX1E", class:"btn2", target: "_blank"  do %>
+          Developer's Manual Part 3
+        <% end %>
+      </div>
+    </div> <!-- /div row of Robotics Research Co-op manuals -->
+  </div> 
+        
+  <br>
+    
+  <div class="container">
+    <h2 class="left-align"> Simon Fraser University </h2>
+    <br>
     <h4 class="left-align"> ENSC 483 - Modern Control Systems </h4>
     <div class="row">    
       <div class="col-md-4">
@@ -301,13 +337,13 @@
         <% end %>
       </div>
     </div> <!-- /div row of PHYS 131 - Physics Laboratory I -->
-    
+ 
+    <hr>   
   </div> <!-- /div row of Container -->
   
-  
   <br>
   <br>
-  <br>
+
   <!-- button to go to top -->
   <!--<button onclick="topFunction()" class="hide-box" title="Go to top"> <h1>Go to top of page.</h1></button>-->
   <button onclick="topFunction()" class="hide-btn2-background" title="Go to top"><h3>Go to top of page.</h3></button>
