--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -22,8 +22,14 @@
 
 
 // Typography Styles
-h1, h2, h3 {
+h1, h2, h3, h4, label, a {
   font-family: 'Open Sans', sans-serif;
+  // text-shadow:  -1.5px  1.5px 0 #000,
+		//             1.5px  1.5px 0 #000,
+		//             1.5px -1.5px 0 #000,
+  //               -1.5px -1.5px 0 #000;
+                
+  text-shadow: 1px 0 0 #000, 0 -1px 0 #000, 0 1px 0 #000, -1px 0 0 #000;
 }
 
 // tabs, using padding to make tabs
@@ -33,6 +39,16 @@ h2 {
 
 h4 {
   padding-left: 3em;
+}
+
+.navbar-static-top {
+  margin-bottom: 0;
+}
+
+.alert-width {
+  width: 100%;
+  padding: 0;
+  margin: 0;
 }
 
 // Background gradient
@@ -88,8 +104,10 @@ h4 {
 .home-callout {
   color:white;
   margin-top: -20px;
-  padding-top: 50px;
+  padding-top: 30px;
   padding-bottom: 100px;
+  padding-left: 0px;
+  padding-right: 0px; 
 }
 
 .not-name-container {
@@ -171,6 +189,11 @@ body {
   font-size: 15px;
   display: block;
   margin: 20px auto;
+  
+    text-shadow:  -1.5px  1.5px 0 #000,
+		             1.5px  1.5px 0 #000,
+		             1.5px -1.5px 0 #000,
+                -1.5px -1.5px 0 #000;
   
 }
 
