--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Lestley Online Portfolio</title>
+    <title>Lestley's Online Portfolio</title>
     <%= csrf_meta_tags %>
     <link href="//fonts.googleapis.com/css?family=Open+Sans:400,700,800" rel="stylesheet">
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
@@ -21,7 +21,6 @@
             <span class="icon-bar"></span>
           </button>
           <%= link_to root_path, class: "navbar-brand" do %>
-            <i class= "fa fa-id-badge"></i> 
             Lestley Links
           <% end %>
         </div>
@@ -38,7 +37,7 @@
       </div>
     </nav>
     
-    <div class="container">
+    <div class="container alert-width text-center">
       <% flash.each do |type,msg| %>
         <%= content_tag :div, msg, class: "alert alert-#{type}" %>
       <% end %>
