fixed home-callout, navbar now stays still

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -58,7 +58,6 @@ h4 {
   background: #485563; /* fallback for old browsers */
   background: -webkit-linear-gradient(to left, #485563 , #29323c); /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(to left, #485563 , #29323c); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-
 }
 
 .jumbotron {
@@ -105,7 +104,8 @@ h4 {
   color:white;
   margin-top: -20px;
   padding-top: 30px;
-  padding-bottom: 100px;
+  // padding-bottom: 100px;
+  padding-bottom: 25%;
   padding-left: 0px;
   padding-right: 0px; 
 }
