--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,4 +1,4 @@
-<div class="home-callout text-center container-fluid">
+<div class="home-callout-contact text-center container-fluid">
   <div class='jumbotron'>
     <h1><strong> Contact Lestley </strong></h1>
   </div>
