switched schema from comments to message

--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -20,7 +20,7 @@
             
             <div class="form-group">
               <%= f.label :message %>
-              <%= f.text_area :comments, class: 'form-control' %>
+              <%= f.text_area :message, class: 'form-control' %>
             </div>
               
               <%= f.submit 'Submit', class: 'btn btn2' %>
@@ -45,6 +45,11 @@
          .home-callout {
             // padding-bottom: 100px;
             padding-bottom: 25%;
+          }
+       UPDATE 2: This is now cleaner by giving padding of home-callout-contact a brute force value
+         .home-callout-contact {
+            // padding-bottom: 100px;
+            padding-bottom: 360.50px;
           }
   -->
 
