--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -37,15 +37,21 @@
     <h1 class="left-align"><strong> Resume </strong></h1>
     <div class="row"> 
       <div class="col-md-4">
+        <!--Resume-->
+        <%= link_to "https://drive.google.com/open?id=0B9Dt_lzGChXNRGQ3ZVlUSFlQQVE", class:"btn2", target: "_blank" do %>
+          Resume
+        <% end %>
+      </div>
+      <div class="col-md-4">
         <!-- col-md-offset-4 -->
         <!--Resume-->
-        <%= link_to "https://drive.google.com/file/d/0B9Dt_lzGChXNNXRlR3R0S1I4bVk/view", class:"btn2", target: "_blank" do %>
-          Resume
+        <%= link_to "https://drive.google.com/open?id=0B9Dt_lzGChXNNXRlR3R0S1I4bVk", class:"btn2", target: "_blank" do %>
+          Long Resume
         <% end %>
       </div>
     </div>
    </div> 
-  
+  <!---->
   <br>
   
   <div class="container">
