--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -285,8 +285,21 @@
         <% end %>
       </div>
     </div> <!-- /div row of ENSC 327 - Communication Systems -->
+
+      <br>
+      <br>
+      <br>
+    <h4 class="left-align"> ENSC 316 - Introduction to Electrodynamics for Engineers </h4>
+    <div class="row"> 
+      <div class="col-md-4">
+        <!-- col-md-offset-4 -->
+        <%= link_to "https://drive.google.com/file/d/1G3iNloqC5cgtvSLjNdUbg2wpRpQAJ4ET/view", class:"btn2", target: "_blank"  do %>
+          Design Project - Qi Charging Station
+        <% end %>
+      </div>
+    </div> <!-- /div row of ENSC 316 - Introduction to Electrodynamics for Engineers -->
     
-            
+    
       <br>
       <br>
       <br>
