--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -29,7 +29,7 @@
         <% end %>
       </div>
     </div>
-  </div>
+  </div> <!-- /div row of Container for Profiles -->
   
   <br>
 
@@ -50,12 +50,13 @@
         <% end %>
       </div>
     </div>
-   </div> 
-  <!---->
+   </div> <!-- /div row of Container for Resume -->
+
   <br>
   
   <div class="container">
     <h1 class="left-align"><strong> Projects </strong></h1>
+    
     <h2 class="left-align"> Web Development </h2>
     <div class="row"> 
       <div class="col-md-4">
@@ -76,7 +77,7 @@
         <% end %>
       </div>
     </div>
-  </div>
+  </div> <!-- /div row of Container for Web Development -->
    
   <br>
 
@@ -113,7 +114,7 @@
         <% end %>
       </div>
     </div> <!-- /div row of Robotics Research Co-op manuals -->
-  </div> 
+  </div> <!-- /div row of Container for Robotics Research Co-op -->
         
   <br>
     
@@ -320,24 +321,24 @@
     <h4 class="left-align"> ENSC 225 - Microelectronics I </h4>
     <div class="row"> 
       <div class="col-md-4">
-        <%= link_to "https://drive.google.com/file/d/0B9Dt_lzGChXNY1VrVFZ6Nnh6Z00/view", class:"btn2", target: "_blank"  do %>
+        <%= link_to "https://drive.google.com/file/d/0B9Dt_lzGChXNY1VrVFZ6Nnh6Z00/view", class:"center button-wrap rad-button dark gradient", target: "_blank"  do %>
           Lab 1 - Opamps
         <% end %>
       </div>
       <div class="col-md-4">
-        <%= link_to "https://drive.google.com/file/d/0B9Dt_lzGChXNa3RxdkRLRE5lWW8/view", class:"btn2", target: "_blank"  do %>
+        <%= link_to "https://drive.google.com/file/d/0B9Dt_lzGChXNa3RxdkRLRE5lWW8/view", class:"center button-wrap rad-button dark gradient", target: "_blank"  do %>
           Lab 2 - Diodes
         <% end %>
       </div>
     </div> <!-- /div row of ENSC 225 - Microelectronics I -->
     <div class="row"> 
       <div class="col-md-4">
-        <%= link_to "https://drive.google.com/file/d/0B9Dt_lzGChXNUVRRVUJ4Z18wNU0/view", class:"btn2", target: "_blank"  do %>
+        <%= link_to "https://drive.google.com/file/d/0B9Dt_lzGChXNUVRRVUJ4Z18wNU0/view", class:"center button-wrap rad-button dark gradient", target: "_blank"  do %>
           Lab 3 - BJTs
         <% end %>
       </div>
       <div class="col-md-4">
-        <%= link_to "https://drive.google.com/file/d/0B9Dt_lzGChXNV013alNoNzF2UXc/view", class:"btn2", target: "_blank"  do %>
+        <%= link_to "https://drive.google.com/file/d/0B9Dt_lzGChXNV013alNoNzF2UXc/view", class:"center button-wrap rad-button dark gradient", target: "_blank"  do %>
           Lab 4 - MOSFETs
         <% end %>
       </div>
@@ -348,24 +349,26 @@
       <br>
       <br>
     <h4 class="left-align"> PHYS 131 - Physics Laboratory I </h4>
-    <div class="row"> 
+   <div class="row"> 
       <div class="col-md-4">
-        <!-- col-md-offset-4  -->
-        <%= link_to "https://drive.google.com/file/d/0B9Dt_lzGChXNODFNejdiVEljUHc/view", class:"btn2", target: "_blank"  do %>
+        <%= link_to "https://drive.google.com/file/d/0B9Dt_lzGChXNODFNejdiVEljUHc/view", class:"hvr-float-shadow", target: "_blank"  do %>
           Force and Moving Charges
         <% end %>
       </div>
     </div> <!-- /div row of PHYS 131 - Physics Laboratory I -->
  
     <hr>   
-  </div> <!-- /div row of Container -->
-  
+</div> <!-- /div row of Container for Projects -->
+
   <br>
   <br>
 
+
+
+
   <!-- button to go to top -->
   <!--<button onclick="topFunction()" class="hide-box" title="Go to top"> <h1>Go to top of page.</h1></button>-->
-  <button onclick="topFunction()" class="hide-btn2-background" title="Go to top"><h3>Go to top of page.</h3></button>
+  <div onclick="topFunction()" class="hvr-float-shadow" title="Go to top"><h3>Click to go to top of page.</h3></div>
 </div> <!-- /div of class="home-callout text-center container-fluid" -->
 
 <!----------------------------------------------------------------------------->
