--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,29 +1,29 @@
 <div class="home-callout text-center container-fluid">
   <div class='jumbotron'>
-    <h1><strong> Lestley A. Gabo </strong></h1>
+    <h1><strong> Lestley Gabo </strong></h1>
   </div>
   <!--<h4>This page contains links to my LinkedIn, GitHub, and HackerRank profiles.</h4>-->
   <!--<h4>It also contains links to my projects, completed or otherwise.</h4>-->
 
 
-  <div class="container">
+  <div class="container text-left">
     <hr>
-    <h1 class="left-align"><strong> Profiles </strong></h1>
+    <h1 ><strong> Profiles </strong></h1>
     <div class="row">  
       <div class="col-md-4">
-        <%= link_to "//www.linkedin.com/in/lestgabo/", class:"btn2", target: "_blank" do %>
+        <%= link_to "//www.linkedin.com/in/lestgabo/", class:"hvr-float-shadow", target: "_blank" do %>
           <i class= "fa fa-linkedin-square"></i>
           LinkedIn
         <% end %>
       </div>
       <div class="col-md-4">
-        <%= link_to "//github.com/lestgabo", class:"btn2", target: "_blank" do %>
+        <%= link_to "//github.com/lestgabo", class:"hvr-float-shadow", target: "_blank" do %>
           <i class= "fa fa-github-square"></i>
           GitHub
         <% end %>
       </div>
       <div class="col-md-4">
-        <%= link_to "//www.hackerrank.com/beeftosino", class:"btn2", target: "_blank" do %>
+        <%= link_to "//www.hackerrank.com/beeftosino", class:"hvr-float-shadow", target: "_blank" do %>
           <i class= "fa fa-h-square"></i>
           HackerRank
         <% end %>
@@ -33,19 +33,19 @@
   
   <br>
 
-  <div class="container">
-    <h1 class="left-align"><strong> Resume </strong></h1>
+  <div class="container text-left">
+    <h1 ><strong> Resume </strong></h1>
     <div class="row"> 
       <div class="col-md-4">
         <!--Resume-->
-        <%= link_to "https://drive.google.com/open?id=0B9Dt_lzGChXNRGQ3ZVlUSFlQQVE", class:"btn2", target: "_blank" do %>
+        <%= link_to "https://drive.google.com/open?id=0B9Dt_lzGChXNRGQ3ZVlUSFlQQVE", class:"hvr-float-shadow", target: "_blank" do %>
           Resume
         <% end %>
       </div>
       <div class="col-md-4">
         <!-- col-md-offset-4 -->
         <!--Resume-->
-        <%= link_to "https://drive.google.com/open?id=0B9Dt_lzGChXNNXRlR3R0S1I4bVk", class:"btn2", target: "_blank" do %>
+        <%= link_to "https://drive.google.com/open?id=0B9Dt_lzGChXNNXRlR3R0S1I4bVk", class:"hvr-float-shadow", target: "_blank" do %>
           Long Resume
         <% end %>
       </div>
@@ -54,82 +54,79 @@
 
   <br>
   
-  <div class="container">
-    <h1 class="left-align"><strong> Projects </strong></h1>
+  <div class="container text-left">
+    <h1><strong> Projects </strong></h1>
     
-    <h2 class="left-align"> Web Development </h2>
+    <h2> Web Development </h2>
     <div class="row"> 
       <div class="col-md-4">
-        <%= link_to "//pacific-mesa-35161.herokuapp.com/", class:"btn2", target: "_blank" do %>
+        <%= link_to "//pacific-mesa-35161.herokuapp.com/", class:"hvr-float-shadow", target: "_blank" do %>
         <!--<i class= "fa fa-users"></i>-->
         DevMatch
         <% end %>
       </div>
       <div class="col-md-4">
-        <%= link_to "https://lestleygabo.herokuapp.com/", class:"btn2", target: "_blank" do %>
+        <%= link_to "https://lestleygabo.herokuapp.com/", class:"hvr-float-shadow", target: "_blank" do %>
         <!--<i class= "fa fa-id-badge"></i>-->
         Lestley Links
         <% end %>
       </div>
       <div class="col-md-4">
-        <%= link_to "https://learn-rails-by-daniel-kehoe.herokuapp.com/", class:"btn2", target: "_blank" do %>
+        <%= link_to "https://learn-rails-by-daniel-kehoe.herokuapp.com/", class:"hvr-float-shadow", target: "_blank" do %>
           Dormer Fan Page
         <% end %>
       </div>
     </div>
-  </div> <!-- /div row of Container for Web Development -->
+ 
    
   <br>
 
-  <div class="container">
-    <h2 class="left-align"> Robotics Research Co-op </h2>
+    <h2> Robotics Research Co-op </h2>
     <div class="row"> 
       <div class="col-md-4">
-        <%= link_to "//github.com/elderlyrobotics", class:"btn2", target: "_blank" do %>
+        <%= link_to "//github.com/elderlyrobotics", class:"hvr-float-shadow", target: "_blank" do %>
         <i class= "fa fa-github-square"></i>
-          elderlyrobotics GitHub 
+          GitHub - Oculus Robot
         <% end %>
       </div>
       <div class="col-md-4">
-        <%= link_to "https://drive.google.com/file/d/0B9Dt_lzGChXNRVpxeE00TVJ6WHM", class:"btn2", target: "_blank" do %>
-          User Manual 
+        <%= link_to "https://drive.google.com/file/d/0B9Dt_lzGChXNRVpxeE00TVJ6WHM", class:"hvr-float-shadow", target: "_blank" do %>
+          Oculus Robot - User Manual 
         <% end %>
       </div>
     </div>  <!-- /div row of Robotics Research Co-op github and user manual -->
     
     <div class="row">
       <div class="col-md-4">
-        <%= link_to "https://drive.google.com/open?id=0B9Dt_lzGChXNem9Ub2pPU1JXV28", class:"btn2", target: "_blank"  do %>
-          Developer's Manual Part 1
+        <%= link_to "https://drive.google.com/open?id=0B9Dt_lzGChXNem9Ub2pPU1JXV28", class:"hvr-float-shadow", target: "_blank"  do %>
+          Oculus Robot - Developer's Manual Part 1
         <% end %>
       </div>
       <div class="col-md-4">
-        <%= link_to "https://drive.google.com/open?id=0B9Dt_lzGChXNMmEzajBpdV83OTQ", class:"btn2", target: "_blank"  do %>
-          Developer's Manual Part 2
+        <%= link_to "https://drive.google.com/open?id=0B9Dt_lzGChXNMmEzajBpdV83OTQ", class:"hvr-float-shadow", target: "_blank"  do %>
+          Oculus Robot - Developer's Manual Part 2
         <% end %>
       </div>
       <div class="col-md-4">
-        <%= link_to "https://drive.google.com/open?id=0B9Dt_lzGChXNU3FLdXJ3dWloX1E", class:"btn2", target: "_blank"  do %>
-          Developer's Manual Part 3
+        <%= link_to "https://drive.google.com/open?id=0B9Dt_lzGChXNU3FLdXJ3dWloX1E", class:"hvr-float-shadow", target: "_blank"  do %>
+          Oculus Robot - Developer's Manual Part 3
         <% end %>
       </div>
     </div> <!-- /div row of Robotics Research Co-op manuals -->
-  </div> <!-- /div row of Container for Robotics Research Co-op -->
         
   <br>
     
-  <div class="container">
-    <h2 class="left-align"> Simon Fraser University </h2>
+    <h2> Simon Fraser University </h2>
     <br>
-    <h4 class="left-align"> ENSC 483 - Modern Control Systems </h4>
+    <h4> ENSC 483 - Modern Control Systems </h4>
     <div class="row">    
       <div class="col-md-4">
-        <%= link_to "https://drive.google.com/file/d/0B9Dt_lzGChXNdXBmQ29SRjVSR2M/view", class:"btn2", target: "_blank"  do %>
+        <%= link_to "https://drive.google.com/file/d/0B9Dt_lzGChXNdXBmQ29SRjVSR2M/view", class:"hvr-float-shadow", target: "_blank"  do %>
           Research Paper Simulation
         <% end %>
       </div>
       <div class="col-md-4">
-        <%= link_to "https://drive.google.com/file/d/0B9Dt_lzGChXNOG5rSUZiMXgyOGM/view", class:"btn2", target: "_blank"  do %>
+        <%= link_to "https://drive.google.com/file/d/0B9Dt_lzGChXNOG5rSUZiMXgyOGM/view", class:"hvr-float-shadow", target: "_blank"  do %>
           Inverted Pendulum 
         <% end %>
       </div>
@@ -139,27 +136,27 @@
       <br>   
       <br>
       <br>
-    <h4 class="left-align"> ENSC 477 - Biomedical Image Acquisition </h4>
+    <h4 > ENSC 477 - Biomedical Image Acquisition </h4>
     <div class="row"> 
       <div class="col-md-4">
-        <%= link_to "https://drive.google.com/file/d/0B9Dt_lzGChXNVkI3dXI4X1MxeUU/view", class:"btn2", target: "_blank"  do %>
+        <%= link_to "https://drive.google.com/file/d/0B9Dt_lzGChXNVkI3dXI4X1MxeUU/view", class:"hvr-float-shadow", target: "_blank"  do %>
           Lab 1 - MEG
         <% end %>
       </div>
       <div class="col-md-4">
-        <%= link_to "https://drive.google.com/file/d/0B9Dt_lzGChXNV2pOUGQ5YXRacWM/view", class:"btn2", target: "_blank"  do %>
+        <%= link_to "https://drive.google.com/file/d/0B9Dt_lzGChXNV2pOUGQ5YXRacWM/view", class:"hvr-float-shadow", target: "_blank"  do %>
           Lab 2 - CT
         <% end %>
       </div>
     </div> <!-- /div row of ENSC 477 - Biomedical Image Acquisition  -->
     <div class="row">
       <div class="col-md-4">
-        <%= link_to "https://drive.google.com/file/d/0B9Dt_lzGChXNWWc3OUpiVmhXb3M/view", class:"btn2", target: "_blank"  do %>
+        <%= link_to "https://drive.google.com/file/d/0B9Dt_lzGChXNWWc3OUpiVmhXb3M/view", class:"hvr-float-shadow", target: "_blank"  do %>
           Lab 3 - Ultrasound
         <% end %>
       </div>
       <div class="col-md-4">
-        <%= link_to "https://drive.google.com/file/d/0B9Dt_lzGChXNNW1TZ1pYSkRtT3M/view", class:"btn2", target: "_blank"  do %>
+        <%= link_to "https://drive.google.com/file/d/0B9Dt_lzGChXNNW1TZ1pYSkRtT3M/view", class:"hvr-float-shadow", target: "_blank"  do %>
           Lab 4 - MRI Lab
         <% end %>
       </div>
@@ -169,20 +166,20 @@
       <br>        
       <br>
       <br>
-    <h4 class="left-align"> ENSC 476 - Biophotonics and Microscopy Techniques </h4>
+    <h4 > ENSC 476 - Biophotonics and Microscopy Techniques </h4>
     <div class="row"> 
       <div class="col-md-4">
-        <%= link_to "https://drive.google.com/file/d/0B9Dt_lzGChXNRThlbG9YeGVaMXM/view", class:"btn2", target: "_blank"  do %>
+        <%= link_to "https://drive.google.com/file/d/0B9Dt_lzGChXNRThlbG9YeGVaMXM/view", class:"hvr-float-shadow", target: "_blank"  do %>
           Lab 1 - Confocal
         <% end %>
       </div>
       <div class="col-md-4">
-        <%= link_to "https://drive.google.com/file/d/0B9Dt_lzGChXNNmtuZ3FYVjRxV28/view", class:"btn2", target: "_blank"  do %>
+        <%= link_to "https://drive.google.com/file/d/0B9Dt_lzGChXNNmtuZ3FYVjRxV28/view", class:"hvr-float-shadow", target: "_blank"  do %>
           Lab 2 - OCT
         <% end %>
       </div>
       <div class="col-md-4">
-        <%= link_to "https://drive.google.com/file/d/0B9Dt_lzGChXNN1pBa1pGa1IyZ0E/view", class:"btn2", target: "_blank"  do %>
+        <%= link_to "https://drive.google.com/file/d/0B9Dt_lzGChXNN1pBa1pGa1IyZ0E/view", class:"hvr-float-shadow", target: "_blank"  do %>
           Lab 3 - Phase Microscopy
         <% end %>
       </div>
@@ -192,20 +189,20 @@
       <br>      
       <br>
       <br>
-    <h4 class="left-align"> ENSC 470 - Optical Engineering and Laser Applications </h4>
+    <h4 > ENSC 470 - Optical Engineering and Laser Applications </h4>
     <div class="row"> 
       <div class="col-md-4">
-        <%= link_to "https://drive.google.com/file/d/0B9Dt_lzGChXNUHU5N3FKZ2ZjYXc/view", class:"btn2", target: "_blank"  do %>
+        <%= link_to "https://drive.google.com/file/d/0B9Dt_lzGChXNUHU5N3FKZ2ZjYXc/view", class:"hvr-float-shadow", target: "_blank"  do %>
           Lab 1 - Basic Optics
         <% end %>
       </div>
       <div class="col-md-4">
-        <%= link_to "https://drive.google.com/file/d/0B9Dt_lzGChXNR1FmaUpsZEJycms/view", class:"btn2", target: "_blank"  do %>
+        <%= link_to "https://drive.google.com/file/d/0B9Dt_lzGChXNR1FmaUpsZEJycms/view", class:"hvr-float-shadow", target: "_blank"  do %>
           Lab 2 - Spectrometer
         <% end %>
       </div>
       <div class="col-md-4">
-        <%= link_to "https://drive.google.com/file/d/0B9Dt_lzGChXNaG1TUTc1Q2xqUW8/view", class:"btn2", target: "_blank"  do %>
+        <%= link_to "https://drive.google.com/file/d/0B9Dt_lzGChXNaG1TUTc1Q2xqUW8/view", class:"hvr-float-shadow", target: "_blank"  do %>
           Lab 3 - Laser Gaussian Beam
         <% end %>
       </div>
@@ -215,27 +212,27 @@
       <br> 
       <br>
       <br>
-    <h4 class="left-align"> ENSC 305W/440W - Capstone Project </h4>
+    <h4 > ENSC 305W/440W - Capstone Project </h4>
     <div class="row"> 
       <div class="col-md-4">
-        <%= link_to "https://drive.google.com/file/d/0B9Dt_lzGChXNeURWWWtwdGJiWkk/view", class:"btn2", target: "_blank"  do %>
+        <%= link_to "https://drive.google.com/file/d/0B9Dt_lzGChXNeURWWWtwdGJiWkk/view", class:"hvr-float-shadow", target: "_blank"  do %>
           Design
         <% end %>
       </div>
       <div class="col-md-4">
-        <%= link_to "https://drive.google.com/file/d/0B9Dt_lzGChXNWDJNRXBIMkRJVHc/view", class:"btn2", target: "_blank"  do %>
+        <%= link_to "https://drive.google.com/file/d/0B9Dt_lzGChXNWDJNRXBIMkRJVHc/view", class:"hvr-float-shadow", target: "_blank"  do %>
           Test
         <% end %>
       </div>
     </div> <!-- /div row of ENSC 305W/440W - Capstone Project -->
     <div class="row"> 
       <div class="col-md-4">
-        <%= link_to "https://drive.google.com/file/d/0B9Dt_lzGChXNRmdtR0dvLVlDQjA/view", class:"btn2", target: "_blank"  do %>
+        <%= link_to "https://drive.google.com/file/d/0B9Dt_lzGChXNRmdtR0dvLVlDQjA/view", class:"hvr-float-shadow", target: "_blank"  do %>
           Post
         <% end %>
       </div>
       <div class="col-md-4">
-        <%= link_to "https://drive.google.com/file/d/0B9Dt_lzGChXNUC1semYtQkZ6X0E/view", class:"btn2", target: "_blank"  do %>
+        <%= link_to "https://drive.google.com/file/d/0B9Dt_lzGChXNUC1semYtQkZ6X0E/view", class:"hvr-float-shadow", target: "_blank"  do %>
           Demo
         <% end %>
       </div>
@@ -245,11 +242,11 @@
       <br>  
       <br>
       <br>
-    <h4 class="left-align"> ENSC 424 - Multimedia Communications Engineering </h4>
+    <h4 > ENSC 424 - Multimedia Communications Engineering </h4>
     <div class="row"> 
       <div class="col-md-4">
         <!-- col-md-offset-4 -->
-        <%= link_to "https://drive.google.com/file/d/0B9Dt_lzGChXNTFhkTzJQQTFMVFE/view", class:"btn2", target: "_blank"  do %>
+        <%= link_to "https://drive.google.com/file/d/0B9Dt_lzGChXNTFhkTzJQQTFMVFE/view", class:"hvr-float-shadow", target: "_blank"  do %>
           Project Report - Philter
         <% end %>
       </div>
@@ -259,11 +256,11 @@
       <br>      
       <br>
       <br>
-    <h4 class="left-align"> ENSC 406 - Engineering Ethics, Law, and Professional Practice </h4>
+    <h4 > ENSC 406 - Engineering Ethics, Law, and Professional Practice </h4>
     <div class="row"> 
       <div class="col-md-4">
         <!-- col-md-offset-4 -->
-        <%= link_to "https://drive.google.com/file/d/0B9Dt_lzGChXNVzM5Y3JLbGpUM2c/view", class:"btn2", target: "_blank"  do %>
+        <%= link_to "https://drive.google.com/file/d/0B9Dt_lzGChXNVzM5Y3JLbGpUM2c/view", class:"hvr-float-shadow", target: "_blank"  do %>
           Solar Panel Sustainability
         <% end %>
       </div>
@@ -273,28 +270,28 @@
       <br>
       <br>
       <br>
-    <h4 class="left-align"> ENSC 327 - Communication Systems </h4>
+    <h4 > ENSC 327 - Communication Systems </h4>
     <div class="row"> 
       <div class="col-md-4">
-        <%= link_to "https://drive.google.com/file/d/0B9Dt_lzGChXNYmtQcFlkdDV1RWs/view", class:"btn2", target: "_blank"  do %>
+        <%= link_to "https://drive.google.com/file/d/0B9Dt_lzGChXNYmtQcFlkdDV1RWs/view", class:"hvr-float-shadow", target: "_blank"  do %>
           Lab 2 - Amplitude Modulation
         <% end %>
       </div>
       <div class="col-md-4">
-        <%= link_to "https://drive.google.com/file/d/0B9Dt_lzGChXNSUxZYk5QRXFjVnM/view", class:"btn2", target: "_blank"  do %>
+        <%= link_to "https://drive.google.com/file/d/0B9Dt_lzGChXNSUxZYk5QRXFjVnM/view", class:"hvr-float-shadow", target: "_blank"  do %>
           Lab 3 - FM Mod and Demod
         <% end %>
       </div>
     </div> <!-- /div row of ENSC 327 - Communication Systems -->
 
+
       <br>
       <br>
       <br>
-    <h4 class="left-align"> ENSC 316 - Introduction to Electrodynamics for Engineers </h4>
+    <h4 > ENSC 316 - Introduction to Electrodynamics for Engineers </h4>
     <div class="row"> 
       <div class="col-md-4">
-        <!-- col-md-offset-4 -->
-        <%= link_to "https://drive.google.com/file/d/1G3iNloqC5cgtvSLjNdUbg2wpRpQAJ4ET/view", class:"btn2", target: "_blank"  do %>
+        <%= link_to "https://drive.google.com/file/d/1G3iNloqC5cgtvSLjNdUbg2wpRpQAJ4ET/view", class:"hvr-float-shadow", target: "_blank"  do %>
           Design Project - Qi Charging Station
         <% end %>
       </div>
@@ -304,11 +301,11 @@
       <br>
       <br>
       <br>
-    <h4 class="left-align"> ENSC 304 - Human Factors and Usability Engineering </h4>
+    <h4 > ENSC 304 - Human Factors and Usability Engineering </h4>
     <div class="row"> 
       <div class="col-md-4">
         <!-- col-md-offset-4 -->
-        <%= link_to "https://drive.google.com/file/d/0B9Dt_lzGChXNd1FpenlyVG1vWGs/view", class:"btn2", target: "_blank"  do %>
+        <%= link_to "https://drive.google.com/file/d/0B9Dt_lzGChXNd1FpenlyVG1vWGs/view", class:"hvr-float-shadow", target: "_blank"  do %>
           Self-Checkout Machines
         <% end %>
       </div>
@@ -318,27 +315,27 @@
       <br> 
       <br>
       <br>
-    <h4 class="left-align"> ENSC 225 - Microelectronics I </h4>
+    <h4 > ENSC 225 - Microelectronics I </h4>
     <div class="row"> 
       <div class="col-md-4">
-        <%= link_to "https://drive.google.com/file/d/0B9Dt_lzGChXNY1VrVFZ6Nnh6Z00/view", class:"center button-wrap rad-button dark gradient", target: "_blank"  do %>
+        <%= link_to "https://drive.google.com/file/d/0B9Dt_lzGChXNY1VrVFZ6Nnh6Z00/view", class:"hvr-float-shadow", target: "_blank"  do %>
           Lab 1 - Opamps
         <% end %>
       </div>
       <div class="col-md-4">
-        <%= link_to "https://drive.google.com/file/d/0B9Dt_lzGChXNa3RxdkRLRE5lWW8/view", class:"center button-wrap rad-button dark gradient", target: "_blank"  do %>
+        <%= link_to "https://drive.google.com/file/d/0B9Dt_lzGChXNa3RxdkRLRE5lWW8/view", class:"hvr-float-shadow", target: "_blank"  do %>
           Lab 2 - Diodes
         <% end %>
       </div>
     </div> <!-- /div row of ENSC 225 - Microelectronics I -->
     <div class="row"> 
       <div class="col-md-4">
-        <%= link_to "https://drive.google.com/file/d/0B9Dt_lzGChXNUVRRVUJ4Z18wNU0/view", class:"center button-wrap rad-button dark gradient", target: "_blank"  do %>
+        <%= link_to "https://drive.google.com/file/d/0B9Dt_lzGChXNUVRRVUJ4Z18wNU0/view", class:"hvr-float-shadow", target: "_blank"  do %>
           Lab 3 - BJTs
         <% end %>
       </div>
       <div class="col-md-4">
-        <%= link_to "https://drive.google.com/file/d/0B9Dt_lzGChXNV013alNoNzF2UXc/view", class:"center button-wrap rad-button dark gradient", target: "_blank"  do %>
+        <%= link_to "https://drive.google.com/file/d/0B9Dt_lzGChXNV013alNoNzF2UXc/view", class:"hvr-float-shadow", target: "_blank"  do %>
           Lab 4 - MOSFETs
         <% end %>
       </div>
@@ -348,7 +345,7 @@
       <br>
       <br>
       <br>
-    <h4 class="left-align"> PHYS 131 - Physics Laboratory I </h4>
+    <h4 > PHYS 131 - Physics Laboratory I </h4>
    <div class="row"> 
       <div class="col-md-4">
         <%= link_to "https://drive.google.com/file/d/0B9Dt_lzGChXNODFNejdiVEljUHc/view", class:"hvr-float-shadow", target: "_blank"  do %>
@@ -358,7 +355,7 @@
     </div> <!-- /div row of PHYS 131 - Physics Laboratory I -->
  
     <hr>   
-</div> <!-- /div row of Container for Projects -->
+  </div> <!-- /div of Container for Projects -->
 
   <br>
   <br>
