removed indent and made text-left

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -37,13 +37,13 @@ h1, h2, h3, h4, label, a {
 }
 
 // tabs, using padding to make tabs
-h2 {
-  padding-left: 1em;
-}
+// h2 {
+//   padding-left: 1em;
+// }
 
-h4 {
-  padding-left: 3em;
-}
+// h4 {
+//   padding-left: 3em;
+// }
 
 .navbar-static-top {
   margin-bottom: 0;
