fixed font weight and lab/project names

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -122,28 +122,28 @@
     <div class="row">    
       <div class="col-md-4">
         <%= link_to "https://drive.google.com/file/d/0B9Dt_lzGChXNdXBmQ29SRjVSR2M/view", class:"hvr-float-shadow", target: "_blank"  do %>
-          Research Paper Simulation
+          Project 1 - Research Paper Simulation
         <% end %>
       </div>
       <div class="col-md-4">
         <%= link_to "https://drive.google.com/file/d/0B9Dt_lzGChXNOG5rSUZiMXgyOGM/view", class:"hvr-float-shadow", target: "_blank"  do %>
-          Inverted Pendulum 
+          Project 2 - Inverted Pendulum 
         <% end %>
       </div>
     </div> <!-- /div row of ENSC 483 - Modern Control Systems -->
     
     
-      <br>
+      <br>      <br>
     <h4>  ENSC 477 - Biomedical Image Acquisition </h4>
     <div class="row"> 
       <div class="col-md-4">
         <%= link_to "https://drive.google.com/file/d/0B9Dt_lzGChXNVkI3dXI4X1MxeUU/view", class:"hvr-float-shadow", target: "_blank"  do %>
-          Lab 1 - MEG
+          Lab 1 - Magnetoencephalography (MEG)
         <% end %>
       </div>
       <div class="col-md-4">
         <%= link_to "https://drive.google.com/file/d/0B9Dt_lzGChXNV2pOUGQ5YXRacWM/view", class:"hvr-float-shadow", target: "_blank"  do %>
-          Lab 2 - CT
+          Lab 2 - Simulated Computed Tomography
         <% end %>
       </div>
     </div> <!-- /div row of ENSC 477 - Biomedical Image Acquisition  -->
@@ -155,13 +155,13 @@
       </div>
       <div class="col-md-4">
         <%= link_to "https://drive.google.com/file/d/0B9Dt_lzGChXNNW1TZ1pYSkRtT3M/view", class:"hvr-float-shadow", target: "_blank"  do %>
-          Lab 4 - MRI Lab
+          Lab 4 - Magnetic Resonance Imaging (MRI)
         <% end %>
       </div>
     </div> <!-- /div row of ENSC 477 - Biomedical Image Acquisition  -->
     
 
-      <br>
+      <br>      <br>
     <h4>  ENSC 476 - Biophotonics and Microscopy Techniques </h4>
     <div class="row"> 
       <div class="col-md-4">
@@ -171,18 +171,18 @@
       </div>
       <div class="col-md-4">
         <%= link_to "https://drive.google.com/file/d/0B9Dt_lzGChXNNmtuZ3FYVjRxV28/view", class:"hvr-float-shadow", target: "_blank"  do %>
-          Lab 2 - OCT
+          Lab 2 - Optical Coherence Tomography
         <% end %>
       </div>
       <div class="col-md-4">
         <%= link_to "https://drive.google.com/file/d/0B9Dt_lzGChXNN1pBa1pGa1IyZ0E/view", class:"hvr-float-shadow", target: "_blank"  do %>
-          Lab 3 - Phase Microscopy
+          Lab 3 - Quantitative Phase Microscopy
         <% end %>
       </div>
     </div> <!-- /div row of ENSC 476 - Biophotonics and Microscopy Techniques -->
     
     
-      <br>
+      <br>      <br>
     <h4>  ENSC 470 - Optical Engineering and Laser Applications </h4>
     <div class="row"> 
       <div class="col-md-4">
@@ -203,35 +203,35 @@
     </div> <!-- /div row of ENSC 470 - Optical Engineering and Laser Applications -->
         
 
-      <br>
+      <br>      <br>
     <h4>  ENSC 305W/440W - Capstone Project </h4>
     <div class="row"> 
       <div class="col-md-4">
         <%= link_to "https://drive.google.com/file/d/0B9Dt_lzGChXNeURWWWtwdGJiWkk/view", class:"hvr-float-shadow", target: "_blank"  do %>
-          Design
+          Smart Post - Design Specification
         <% end %>
       </div>
       <div class="col-md-4">
         <%= link_to "https://drive.google.com/file/d/0B9Dt_lzGChXNWDJNRXBIMkRJVHc/view", class:"hvr-float-shadow", target: "_blank"  do %>
-          Test
+          Smart Post - Test Plan
         <% end %>
       </div>
     </div> <!-- /div row of ENSC 305W/440W - Capstone Project -->
     <div class="row"> 
       <div class="col-md-4">
         <%= link_to "https://drive.google.com/file/d/0B9Dt_lzGChXNRmdtR0dvLVlDQjA/view", class:"hvr-float-shadow", target: "_blank"  do %>
-          Post
+          Smart Post - Post-Mortem
         <% end %>
       </div>
       <div class="col-md-4">
         <%= link_to "https://drive.google.com/file/d/0B9Dt_lzGChXNUC1semYtQkZ6X0E/view", class:"hvr-float-shadow", target: "_blank"  do %>
-          Demo
+          Smart Post - Demo
         <% end %>
       </div>
     </div> <!-- /div row of ENSC 305W/440W - Capstone Project -->
     
 
-      <br>
+      <br>      <br>
     <h4>  ENSC 424 - Multimedia Communications Engineering </h4>
     <div class="row"> 
       <div class="col-md-4">
@@ -243,7 +243,7 @@
     </div> <!-- /div row of ENSC 424 - Multimedia Communications Engineering -->
     
 
-      <br>
+      <br>      <br>
     <h4>  ENSC 406 - Engineering Ethics, Law, and Professional Practice </h4>
     <div class="row"> 
       <div class="col-md-4">
@@ -255,7 +255,7 @@
     </div> <!-- /div row of ENSC 406 - Engineering Ethics, Law, and Professional Practice -->
     
 
-      <br>
+      <br>      <br>
     <h4>  ENSC 327 - Communication Systems </h4>
     <div class="row"> 
       <div class="col-md-4">
@@ -271,7 +271,7 @@
     </div> <!-- /div row of ENSC 327 - Communication Systems -->
 
 
-      <br>
+      <br>      <br>
     <h4>  ENSC 316 - Introduction to Electrodynamics for Engineers </h4>
     <div class="row"> 
       <div class="col-md-4">
@@ -282,7 +282,7 @@
     </div> <!-- /div row of ENSC 316 - Introduction to Electrodynamics for Engineers -->
     
 
-      <br>
+      <br>      <br>
     <h4>  ENSC 304 - Human Factors and Usability Engineering </h4>
     <div class="row"> 
       <div class="col-md-4">
@@ -294,35 +294,35 @@
     </div> <!-- /div row of ENSC 304 - Human Factors and Usability Engineering -->
     
 
-      <br>
+      <br>      <br>
     <h4>  ENSC 225 - Microelectronics I </h4>
     <div class="row"> 
       <div class="col-md-4">
         <%= link_to "https://drive.google.com/file/d/0B9Dt_lzGChXNY1VrVFZ6Nnh6Z00/view", class:"hvr-float-shadow", target: "_blank"  do %>
-          Lab 1 - Opamps
+          Lab 1 - Operational Amplifier Circuits (Opamps)
         <% end %>
       </div>
       <div class="col-md-4">
         <%= link_to "https://drive.google.com/file/d/0B9Dt_lzGChXNa3RxdkRLRE5lWW8/view", class:"hvr-float-shadow", target: "_blank"  do %>
-          Lab 2 - Diodes
+          Lab 2 - Characterization of Diodes and simple diode Circuits
         <% end %>
       </div>
     </div> <!-- /div row of ENSC 225 - Microelectronics I -->
     <div class="row"> 
       <div class="col-md-4">
         <%= link_to "https://drive.google.com/file/d/0B9Dt_lzGChXNUVRRVUJ4Z18wNU0/view", class:"hvr-float-shadow", target: "_blank"  do %>
-          Lab 3 - BJTs
+          Lab 3 - Characterization of BJTs and single stage BJT amplifier
         <% end %>
       </div>
       <div class="col-md-4">
         <%= link_to "https://drive.google.com/file/d/0B9Dt_lzGChXNV013alNoNzF2UXc/view", class:"hvr-float-shadow", target: "_blank"  do %>
-          Lab 4 - MOSFETs
+          Lab 4 - Characterization of MOSFETs and MOS amplifier
         <% end %>
       </div>
     </div> <!-- /div row of ENSC 225 - Microelectronics I -->
     
 
-      <br>
+      <br>      <br>
     <h4>  PHYS 131 - Physics Laboratory I </h4>
    <div class="row"> 
       <div class="col-md-4">
