--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -36,11 +36,14 @@ h1, h2, h3, h4, label, a {
   color: #323232;
 }
 
+body {
+  font-weight: bold;
+}
+
 // tabs, using padding to make tabs
 // h2 {
 //   padding-left: 1em;
 // }
-
 // h4 {
 //   padding-left: 3em;
 // }
