sumbit button set to primary with hover effect

--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -23,7 +23,7 @@
               <%= f.text_area :message, class: 'form-control' %>
             </div>
               
-              <%= f.submit 'Submit', class: 'btn btn2' %>
+              <%= f.submit 'Submit', class: 'btn btn-primary hvr-float-shadow' %>
           <% end %>
         </div> <!-- well -->
       </div> <!-- col-md-4 -->
