--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,14 +20,14 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <%= link_to root_path, class: "navbar-brand" do %>
+          <%= link_to root_path, class: "navbar-brand hvr-float-shadow" do %>
             Lestley Links
           <% end %>
         </div>
         <div class="collapse navbar-collapse" id="main-nav-collapse">
           <ul class="nav navbar-nav navbar-right">
             <li>
-              <%= link_to new_contact_path do %>
+              <%= link_to new_contact_path, class:"navbar-brand hvr-float-shadow" do %>
                 <i class= "fa fa-envelope-open-o"></i>
                 Contact Lestley
               <% end %>
