--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -78,11 +78,23 @@
       </div>
     </div>
  
+    <div class="row"> 
+      <div class="col-md-4">
+        <%= link_to "http://sample-app-from-rails-tutorial.herokuapp.com/", class:"hvr-float-shadow", target: "_blank" do %>
+          Twitter Sample Application
+        <% end %>
+      </div>
+    </div>
    
   <br>
 
     <h2> Robotics Research Co-op </h2>
     <div class="row"> 
+      <div class="col-md-4">
+        <%= link_to "https://www.youtube.com/watch?v=ZmU-hsg7x38", class:"hvr-float-shadow", target: "_blank" do %>
+          YouTube - Oculus Robot - Platform Control
+        <% end %>
+      </div>
       <div class="col-md-4">
         <%= link_to "//github.com/elderlyrobotics", class:"hvr-float-shadow", target: "_blank" do %>
         <i class= "fa fa-github-square"></i>
